[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lint"
version = "1"
description = "Python static analysis linting tools."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["gamla"]

[dependency-groups]
test = ["pytest"]

[project.scripts]
static-analysis = "lint.static_analysis:main"
make-api-doc = "lint.make_api_doc:main"
format-csv = "lint.format_csv:main"
format-assistant-configuration = "lint.format_assistant_configuration:main"
validate-triplets = "lint.validate_triplets:main"
check-uuid-quality = "lint.uuid_quality:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lint*"]

[tool.setuptools]
"zip-safe" = false
"include-package-data" = true

[tool.isort]
float_to_top = true
atomic = true
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["gamla", "pytest"]
